# comprs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.cursor/plans/: image_resolution_resizing_7ba1149e.plan.md
.github/workflows/: ci.yml
benches/: BENCHMARKS.md  README.md  comparison.rs  components.rs  decode_benchmark.rs  encode_benchmark.rs  size_snapshot.rs  size_snapshot_baseline.md
benchmarks/: aggregate.mjs  run-cross-bench.sh
benchmarks/js/: package.json  pnpm-lock.yaml  run.mjs
docs/: README.md  cli.md  codebase-size-comparison.md  crate.md  decoding.md  deflate.md  introduction-to-image-compression.md  introduction-to-rust.md  jpeg-encoding.md  lz77-compression.md  performance-optimization.md  png-encoding.md  wasm.md
examples/: codec_harness.rs  fixture_size.rs
src/: bits.rs  color.rs  error.rs  lib.rs  paeth.rs  resize.rs  wasm.rs
src/compress/: adler32.rs  crc32.rs  deflate.rs  huffman.rs  inflate.rs  lz77.rs  mod.rs
src/decode/: bit_reader.rs  idct.rs  inflate.rs  jpeg.rs  mod.rs  png.rs
src/jpeg/: huffman.rs  mod.rs  progressive.rs  quantize.rs
src/png/: bit_depth.rs  chunk.rs  decode.rs  filter.rs  mod.rs
src/simd/: aarch64.rs  fallback.rs  mod.rs  x86_64.rs
tests/: decode_conformance.rs  deflate_packed_regression.rs  fixture_metadata.rs  jpeg_conformance.rs  png_conformance.rs  simd_fallback_equality.rs
tests/fixtures/: REFERENCE.md
tests/support/: fixture_info.rs  jpeg_corpus.rs  kodak.rs  mod.rs  pngsuite.rs  synthetic.rs
web/: README.md  package.json  pnpm-lock.yaml
web/e2e/: smoke.spec.ts
(+13 files in other folders)
