[package]
name = "comprs"
version = "0.1.0"
edition = "2021"
description = "A minimal-dependency, high-performance image compression library"
license = "MIT"
readme = "README.md"
keywords = ["image", "compression", "png", "jpeg", "encoding"]
categories = ["compression", "encoding", "multimedia::images"]

[lib]
name = "comprs"
path = "src/lib.rs"

[[bin]]
name = "comprs"
path = "src/bin/comprs.rs"
required-features = ["cli"]

[features]
default = []
simd = []
parallel = ["rayon"]
cli = ["clap", "png", "jpeg-decoder"]

[dependencies]
rayon = { version = "1.10", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
png = { version = "0.17", optional = true }
jpeg-decoder = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = "0.25"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
proptest = "1.5"
flate2 = "1.0"


[[bench]]
name = "encode_benchmark"
harness = false

[[bench]]
name = "deflate_micro"
harness = false
